--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 <body>
 	  <!-- Embedding the audio file -->
 	  <audio autoplay>
-        <source src="/App/Assets/FreshPrinceSong.mp3" type="audio/mpeg">
+        <source src="./App/Assets/FreshPrinceSong.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
 
