--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
 		<div class="modal-wrapper">
 			<div class="modal-content">
 				<h1 id="modalTitle">Modal Title</h1>
-				<img id="modalImage" src="/App/Assets/HighTop.jpeg" alt="Modal Image">
+<!-- 				<img id="modalImage" src="/App/Assets/HighTop.jpeg" alt="Modal Image"> -->
 				<!-- <img id="modalImage" src="/App/Assets/FRB.jpeg" alt="Modal Image"> -->
 				<p id="modalDescription">Modal Description</p>
 			</div>
