--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,9 @@
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./style.css" type="text/css" />
 	<meta charset="utf-8">
+	<meta property="og:title" content="Andrew Lowery's 3D Playground">
+	<meta property="og:description" content="Three D Portfolio">
+	<meta property="og:image" content="https://yourdomain.com/App/Assets/3D_Avatar.jpg">
 	<title>Andrew Lowery's 3D Playground (ThrowBack Fresh Prince)</title>
 </head>
 
@@ -36,7 +39,7 @@
 		<div class="modal-wrapper">
 			<div class="modal-content">
 				<h1 id="modalTitle">Modal Title</h1>
-<!-- 				<img id="modalImage" src="/App/Assets/HighTop.jpeg" alt="Modal Image"> -->
+				<img id="modalImage" src="/App/Assets/HighTop.jpeg" alt="Modal Image">
 				<!-- <img id="modalImage" src="/App/Assets/FRB.jpeg" alt="Modal Image"> -->
 				<p id="modalDescription">Modal Description</p>
 			</div>
