--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 	<meta charset="utf-8">
 	<meta property="og:title" content="Andrew Lowery's 3D Playground">
 	<meta property="og:description" content="Three D Portfolio">
-	<meta property="og:image" content="https://yourdomain.com/App/Assets/3D_Avatar.jpg">
+	<meta property="og:image" content="https://threedplayground.onrender.com/App/Assets/3D_Avatar.jpg">
 	<title>Andrew Lowery's 3D Playground (ThrowBack Fresh Prince)</title>
 </head>
 
