--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./style.css" type="text/css" />
 	<meta charset="utf-8">
-	<meta property="og:title" content="Andrew Lowery's 3D Playground">
+	<meta property="og:title" content="Geekazon's 3D Playground">
 	<meta property="og:description" content="Three D Portfolio">
 	<meta property="og:url" content="https://threedplayground.onrender.com" 
 	<meta property="og:image" content="https://threedplayground.onrender.com/App/Assets/3D_Avatar.jpg">
