--- a/src/index.html
+++ b/src/index.html
@@ -17,18 +17,18 @@
 
 <body>
 	  <!-- Embedding the audio file -->
-	  <audio autoplay>
+<!-- 	  <audio autoplay>
         <source src="/App/Assets/FreshPrinceSong.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
-    </audio>
+    </audio> -->
 
 	<!-- Script to hide the audio player -->
-    <script>
+<!--     <script>
         window.addEventListener('load', function() {
             var audioPlayer = document.querySelector('audio');
             audioPlayer.style.display = 'none';
         });
-    </script>
+    </script> -->
 
 
 	<canvas class="threejs"></canvas>
