--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
 
 
 	<canvas class="threejs"></canvas>
-	<script type="module" src="./index.js"></script>
+	<script type="module" src="./App.js"></script>
 	<div class="overlay"></div>
 	<h1 class="loading">Loading Experience... <span id="progressPercentage"></span>%</h1>
 	<button class="start">START</button>
