--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="./style.css" type="text/css" />
+<!-- 	<link rel="stylesheet" href="./style.css" type="text/css" /> -->
 	<meta charset="utf-8">
 	<meta property="og:title" content="Geekazon's 3D Playground" />
 	<meta property="og:description" content="Three D Portfolio" />
